--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Grupprojekt</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
+    <script src="functions.js"></script>  
 </head>
 <body>
     <div class="form-wrapper">  
