--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label for="artist">Title</label>
             <input type="text" name="title" id="title"> 
 
-            <button id="searchBtn">Search</button>
+            <button id="searchBtn" disabled>Search</button>
         </form>
     </div>
     <div class="lyric-wrapper" id="lyrics-here">
